--- a/new/src/index.css
+++ b/new/src/index.css
@@ -3,3 +3,7 @@
     background-color: aqua;
     border: 3px solid black;
 }
+.container {
+    background-color: white;
+    border: 1px solid red;
+}
